# xmb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/xmb/: Cargo.toml
crates/xmb-cli/: Cargo.toml
crates/xmb-cli/src/: main.rs
crates/xmb/src/: ecf.rs  lib.rs  types.rs  variant.rs  xmb.rs
src/: error.rs  lib.rs  main.rs  types.rs  variant.rs  xmb.rs
